awx-traefik-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: awx
  name: awx-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: ansible.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awx-service
                port:
                  number: 80
